feat(backend): add NestJS multi-tenant backend
Implement enterprise-grade multi-tenant backend with:

Architecture:
- Multi-tenant data model (Tenant -> App -> Config -> PromptProfile)
- JWT authentication with secure session tokens
- WebSocket gateways for real-time chat and voice signaling

Core modules:
- Tenant management with full CRUD operations
- App management for multi-tenant application setup
- Config management with versioning support
- Prompt profile system for backend-managed AI prompts
- Widget session initialization and management

Features:
- OpenAI GPT-4 integration with streaming responses
- Real-time chat via Socket.IO WebSocket gateway
- Voice assistant signaling via WebRTC gateway
- UI hints system for widget customization
- Health check endpoints

Database:
- PostgreSQL with Prisma ORM (v7)
- UUID primary keys throughout
- Proper timestamps (createdAt, updatedAt, deletedAt)
- Initial migration with multi-tenant schema
- Seed script with demo data

Includes API documentation (Swagger), environment example,
and database setup scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ Thumbs.db
 # TypeScript
 *.tsbuildinfo
 
+# Backend static (build artifacts copied from widget-loader)
+packages/backend/static/
+
 # Misc
 .cache/
 temp/
