feat(examples): add integration examples
Add comprehensive examples demonstrating widget integration:

host-site:
- Static HTML example with basic widget embedding
- Simple script tag integration pattern
- Minimal setup for quick testing

basic-integration:
- Vite + React starter template
- Basic React component integration
- Development environment setup

react-integration:
- Complete React integration patterns
- Embedded widget component
- Modal widget with Dialog
- Direct widget usage
- Custom hook (useKuzushiWidget) for widget control
- Multiple integration approaches

nextjs-integration:
- Next.js App Router integration
- SSR-safe dynamic imports
- Client-side widget components
- Multiple page examples (embedded, modal, SSR)
- Environment configuration

Each example includes:
- README with setup instructions
- TypeScript configuration
- Environment variable examples

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,9 @@ Thumbs.db
 # Backend static (build artifacts copied from widget-loader)
 packages/backend/static/
 
+# Host site build artifacts (copied during predev)
+examples/host-site/*.js
+
 # Misc
 .cache/
 temp/
