chore(deploy): add PM2 ecosystem config and deployment guides
Add production deployment infrastructure:

PM2 Configuration (ecosystem.config.js):
- NestJS backend process management
- Development mode (PORT 3001) and production mode (PORT 4002)
- JSON logging to logs/ directory
- Memory limits and graceful shutdown
- Deployment config for Contabo server

Deployment Documentation:
- STEP_BY_STEP_DEPLOYMENT.md: Comprehensive deployment checklist
- UBUNTU_SERVER_GUIDE.md: Ubuntu server setup guide

Infrastructure:
- logs/ directory with .gitkeep
- Updated .gitignore for logs and internal requirements

Usage:
  pm2 start ecosystem.config.js              # Development
  pm2 start ecosystem.config.js --env production  # Production

--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,8 @@ out/
 *.env
 
 # Logs
-logs/
-*.log
+logs/*.log
+!logs/.gitkeep
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -63,6 +63,9 @@ packages/backend/static/
 
 # Host site build artifacts (copied during predev)
 examples/host-site/*.js
+
+# Requirements with credentials (internal use only)
+docs/requirements/
 
 # Misc
 .cache/
